Fixed mobile styles for book covers

--- a/sites/all/modules/custom/delicious_import/feed_style.css
+++ b/sites/all/modules/custom/delicious_import/feed_style.css
@@ -162,3 +162,14 @@ ol.linenums li {
 .node-goodreads-book .group-left {
   width: 15% !important;
 }
+
+.node-goodreads-book .group-right {
+    margin-left: 15px;
+}
+
+@media (max-width: 650px) {
+    .node-goodreads-book .group-left {
+        float: none !important;
+        margin: 0 auto;
+    }
+}
